tests/fail/slab_uaf_decons.tk
import std/io::println
import core/option::Option

shape Point (
    x: i32,
    y: i32
)

fn escape_decons(opt: Option<Point>) -> &i32 {
    auto default_val = 0
    match opt {
        auto Option<Point>::Some(&p) => {
            return p.&x  // Should fail because &p is bound to opt (local parameter)
        }
        _ => {
            return &default_val
        }
    }
}

fn main() -> i32 {
    auto pt = Point(x=10, y=20)
    auto opt = Option<Point>::Some(pt)
    auto &res = escape_decons(opt)
    println("res = {}", *res)
    return 0
}
